--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "watch-sass": "npm run build-sass && npm run build-sass -- -w"
   },
   "dependencies": {
-    "node-sass": "^4.7.2",
-    "npm": "^5.7.1",
+    "hoek": "^5.0.3",
+    "node-sass": "^4.9.0",
+    "npm": "^5.8.0",
     "update": "^0.7.4"
   }
 }
